# hyper-boing

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.h  appconsole.cpp  appconsole.h  appdata.cpp  appdata.h  audiomanager.cpp  audiomanager.h  ball.cpp  ball.h  bmfont.cpp  bmfont.h  configdata.cpp  configdlg.cpp  configscreen.cpp  configscreen.h  floor.cpp  floor.h  gamerunner.cpp  graph.cpp  graph.h  item.cpp  logger.cpp  menu.cpp  menu.h  minput.cpp  minput.h  mlist.cpp  mlist.h  pang.cpp  pang.h  pang.sln  pang.vcxproj  player.cpp  player.h  scene.cpp  scene.h  (+13 more)
assets/fonts/: maganize_18.fnt  pixelgame_28.fnt  thickfont_grad_32.fnt  thickfont_grad_64.fnt
assets/graph/entities/: ball.json  ball_pop1.json  ball_pop2.json  ball_pop3.json  ball_red.json  ball_splash.json  ball_splash_green.json  ball_splash_red.json  claw_weapon.json  claw_weapon_yellow.json  floor_bricks.json  glass.json  gun_bullet.json  gun_spark.json  harpoon_chain.json  harpoon_spark.json  hexa_cyan.json  hexa_green.json  hexagon_green.json  hexagon_splash.json  hexagon_splash_cyan.json  pickup_shield.json  shield_anim.json
assets/graph/players/: climbing.json  p1climbing.json  p1victory.json  p1walk.json  p2climbing.json  p2victory.json  p2walk.json  p2walk.json.bak
assets/stages/: stage1.stg  stage10.stg  stage11.stg  stage12.stg  stage13.stg  stage14.stg  stage15.stg  stage2.stg  stage3.stg  stage4.stg  stage5.stg  stage6.stg  stage7.stg  stage8.stg  stage9.stg
graph/font/: thickfont_plain.fnt  thickfont_shadow.fnt  thickfont_stroke.fnt
src/: main.h  pang.rc
src/core/: action.cpp  action.h  animcontroller.cpp  animcontroller.h  animsprite.cpp  animsprite.h  animspritesheet.cpp  animspritesheet.h  app.cpp  app.h  appdata.cpp  appdata.h  asepriteloader.cpp  asepriteloader.h  audiomanager.cpp  audiomanager.h  collisionbox.h  configdata.cpp  coordhelper.h  eventmanager.cpp  eventmanager.h  gameevent.cpp  gameevent.h  gameobject.h  gamerunner.cpp  gamerunner.h  graph.cpp  graph.h  isprite.cpp  isprite.h  jsonparser.cpp  jsonparser.h  logger.h  motion.cpp  motion.h  multianimsprite.cpp  multianimsprite.h  oncehelper.cpp  oncehelper.h  renderprops.h  (+8 more)
src/entities/: animeffect.cpp  animeffect.h  ball.cpp  ball.h  clawshot.cpp  clawshot.h  gunshot.cpp  gunshot.h  harpoonshot.cpp  harpoonshot.h  hexa.cpp  hexa.h  hitscore.cpp  hitscore.h  pickup.cpp  pickup.h  pickuptype.h  player.cpp  player.h  playerdeadaction.cpp  playerdeadaction.h  shoot.cpp  shoot.h  shot.cpp  shot.h
src/game/: collisionrules.cpp  collisionrules.h  collisionsystem.cpp  collisionsystem.h  contact.h  floor.cpp  floor.h  freezeeffect.cpp  freezeeffect.h  glass.cpp  glass.h  ladder.cpp  ladder.h  platform.h  scene.cpp  scene.h  stage.cpp  stage.h  stageclear.cpp  stageclear.h  stageloader.cpp  stageloader.h  weapontype.cpp  weapontype.h
src/ui/: appconsole.cpp  appconsole.h  bmfont.cpp  bmfont.h  configscreen.cpp  configscreen.h  editor.cpp  editor.h  menu.cpp  menu.h  menutitle.cpp  menutitle.h  select.cpp  select.h  textoverlay.h
